--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,14 @@
 <header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+  <div class="container container_inner">
+    <div class="logo">logo</div>
+    <nav class="">
+      <ul class="nav-list">
+        <li><a href="">Home</a></li>
+        <li><a href="">Feature keys</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Gallery</a></li>
+        <li><a href="">User Reviews</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
