--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
-<header class="header">
-  <div class="container container_inner">
+<header class="header container">
+  <div class="container_inner">
     <div class="logo">logo</div>
     <nav class="">
       <ul class="nav-list">
