--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,5 +1,5 @@
 <section class="section_container">
   <div class="container home_section">
-    <h2>Bubble Coco</h2>
+    <h2 class="home_title">Bubble <span class="home_accent">Coco</span></h2>
   </div>
 </section>
