--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,7 +2,7 @@
 @import './home.scss';
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
