--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,5 +1,38 @@
 <section class="section_container">
+  <header class="header container">
+    <div class="container_inner">
+      <div class="logo">
+        <a href="">
+          <img src="./img/home/logo.png" alt="logo" />
+        </a>
+      </div>
+      <nav class="">
+        <ul class="nav-list">
+          <li class="nav-list_item"><a href="">Home</a></li>
+          <li class="nav-list_item"><a href="">Feature keys</a></li>
+          <li class="nav-list_item"><a href="">About Us</a></li>
+          <li class="nav-list_item"><a href="">Gallery</a></li>
+          <li class="nav-list_item"><a href="">User Reviews</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
   <div class="container home_section">
-    <h2 class="home_title">Bubble <span class="home_accent">Coco</span></h2>
+    <h2 class="home_title">Bubble <span class="home_accent">CoCo</span></h2>
+    <p class="home_par">
+      Aim, shoot, and pop your way through hundreds of enchanting levels!
+    </p>
+
+    <button class="google_btn btn_js">
+      <div class="btn_img">
+        <svg class="" width="30" height="34">
+          <use href="./img/sprite.svg#icon-Playstore"></use>
+        </svg>
+      </div>
+      <div class="btn_par">
+        <p class="get_btn">Get it on</p>
+        <p class="get_gl">Google Play</p>
+      </div>
+    </button>
   </div>
 </section>
