--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -9,12 +9,7 @@
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  background: #fffbe6;
 }
 .container {
   max-width: 1200px;
