--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -24,15 +24,15 @@
     </p>
 
     <button class="google_btn btn_js">
-      <div class="btn_img">
-        <svg class="" width="30" height="34">
+      <span class="btn_img">
+        <svg width="30" height="34">
           <use href="./img/sprite.svg#icon-Playstore"></use>
         </svg>
-      </div>
-      <div class="btn_par">
+      </span>
+      <span class="btn_par">
         <p class="get_btn">Get it on</p>
         <p class="get_gl">Google Play</p>
-      </div>
+      </span>
     </button>
   </div>
 </section>
