--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -8,25 +8,13 @@ screen types:
     to-desktop
     desktop,
 */
-@mixin media($_screen) {
-  @if $_screen == mobile {
-    @media screen and (min-width: $mobile) {
+@mixin media($screen) {
+  @if $screen == mobile {
+    @media (max-width: $mobile) {
       @content;
     }
-  } @else if $_screen == to-tablet {
-    @media screen and (max-width: $to-tablet) {
-      @content;
-    }
-  } @else if $_screen == tablet {
-    @media screen and (min-width: $tablet) {
-      @content;
-    }
-  } @else if $_screen == to-desktop {
-    @media screen and (max-width: $to-desktop) {
-      @content;
-    }
-  } @else if $_screen == desktop {
-    @media screen and (min-width: $desktop) {
+  } @else if $screen == desktop {
+    @media (min-width: $desktop) {
       @content;
     }
   }
