--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -12,10 +12,16 @@
   background: #fffbe6;
 }
 .container {
-  max-width: 1200px;
+  max-width: $desktop; // 1200px
   margin: 0 auto;
   padding: 0 60px;
+
+  @include media(mobile) {
+    max-width: $mobile; // 320px
+    padding: 0 20px; // Уменьшение отступа для мобильных
+  }
 }
+
 section {
   padding: 0px 0px 80px 0px;
 }
