--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -3,6 +3,11 @@
   border-bottom: 1px solid #ff5b02;
   position: relative;
   z-index: 1;
+  position: fixed; /* Фиксированное позиционирование */
+  top: 0; /* Привязка к верхней части окна */
+  left: 0; /* Привязка к левой стороне окна */
+  right: 0; /* Привязка к правой стороне окна */
+  z-index: 1000; /* Убедитесь, что заголовок будет выше других элементов */
 }
 
 .nav-list {
