--- a/src/scss/feature-keys.scss
+++ b/src/scss/feature-keys.scss
@@ -9,16 +9,16 @@
 }
 .feature_section {
   background-image: url(../img/feature-keys/Vector.png);
-  position: absolute; /* Позволяет расположить элемент относительно родительского элемента */
-  top: 488px;
+  position: absolute;
+  top: 560px; /* Расположение секции на 560 пикселей от верхней части */
   left: 50%;
   transform: translateX(-50%); /* Центрирует секцию по горизонтали */
   background-size: cover;
-  width: 100%;
-  height: calc(100vh + 40px);
-  padding-bottom: 40px;
-  padding-top: 100px;
-  z-index: 1;
+  width: 100%; /* Задает ширину 100% */
+  height: 100%;
+  padding-bottom: 40px; /* Отступ снизу */
+  padding-top: 100px; /* Отступ сверху */
+  z-index: 1; /* Устанавливает порядок отображения выше других элементов */
 }
 
 .feature-list {
