--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,7 +10,7 @@
 
   color: #242424;
   background-color: rgba(255, 255, 255, 0.87);
-  background: #fffbe6;
+  background: white;
 }
 .container {
   max-width: $desktop; // 1200px
