--- a/src/partials/feature-keys.html
+++ b/src/partials/feature-keys.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="">
   <div class="container feature_section">
     <h2 class="feature_title">Feature keys</h2>
     <ul class="feature-list">
