--- a/src/scss/feature-keys.scss
+++ b/src/scss/feature-keys.scss
@@ -1,24 +1,25 @@
 .feature_title {
-  font-family: 'Baloo 2', sans-serif; /* Используйте шрифт Baloo 2 */
-  font-weight: 700; /* Жирность шрифта (Bold) */
-  font-size: 48px; /* Размер шрифта */
-  line-height: 72px; /* Высота строки */
-  text-transform: uppercase; /* Преобразование текста в верхний регистр */
-  color: #000; /* Цвет текста */
+  font-family: 'Baloo 2', sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 72px;
+  text-transform: uppercase;
+  color: #000;
   margin-top: 80px;
 }
+
 .feature_section {
   background-image: url(../img/feature-keys/Vector.png);
   position: absolute;
   top: 560px; /* Расположение секции на 560 пикселей от верхней части */
   left: 50%;
-  transform: translateX(-50%); /* Центрирует секцию по горизонтали */
+  transform: translateX(-50%);
   background-size: cover;
-  width: 100%; /* Задает ширину 100% */
-  height: 100%;
-  padding-bottom: 40px; /* Отступ снизу */
-  padding-top: 100px; /* Отступ сверху */
-  z-index: 1; /* Устанавливает порядок отображения выше других элементов */
+  width: 100%;
+
+  padding-bottom: 40px;
+  padding-top: 100px;
+  z-index: 1;
 }
 
 .feature-list {
@@ -49,15 +50,12 @@
     margin-top: 40px; /* Сдвинуть каждый четный элемент на 20 пикселей вниз */
   }
 }
+
 .feature-icon {
   position: absolute;
-
-  left: 50%; /* Позиционируем по центру по горизонтали */
-  top: 2%; /* Позиционируем по центру по вертикали */
-  transform: translate(
-    -50%,
-    -50%
-  ); /* Сдвигаем на 50% влево и вверх для центрирования */
+  left: 50%;
+  top: 2%;
+  transform: translate(-50%, -50%);
 }
 
 .feature-title {
@@ -80,9 +78,6 @@
   height: 120px;
 }
 
-// .feature-text {
-//   margin-top: -65px;
-// }
 .feature-title {
   font-family: 'Baloo 2', sans-serif;
   font-weight: 500;
@@ -93,6 +88,7 @@
   color: #ff5b02;
   text-transform: none;
 }
+
 .feature-description {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
