--- a/src/scss/common/_mixins.scss
+++ b/src/scss/common/_mixins.scss
@@ -10,7 +10,7 @@ screen types:
 */
 @mixin media($screen) {
   @if $screen == mobile {
-    @media (max-width: $mobile) {
+    @media (min-width: 320px) and (max-width: 360px) {
       @content;
     }
   } @else if $screen == desktop {
