--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -8,6 +8,10 @@
   left: 0; /* Привязка к левой стороне окна */
   right: 0; /* Привязка к правой стороне окна */
   z-index: 1000; /* Убедитесь, что заголовок будет выше других элементов */
+  @include media(mobile) {
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .nav-list {
@@ -21,6 +25,9 @@
   line-height: 1.44444;
   color: #fff;
   padding: 19px 0 19px 0;
+  @include media(mobile) {
+    display: none;
+  }
 
   // @include media(tablet) {
   //   justify-content: flex-start;
@@ -43,16 +50,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  @include font(30, 40);
-  color: $_header_color;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: $_header_accent_color;
+  @include media(mobile) {
+    padding: 8px;
+  }
 }
