--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,11 +1,16 @@
 .home_section {
-  background: url(../img/home/baner.jpg) no-repeat center center;
+  background: url(../img/home/baner.png) no-repeat center center;
   background-size: cover;
   max-width: 1200px;
   height: 600px;
   position: relative;
-
   z-index: 0;
+  @include media(mobile) {
+    background: url(../img/home/baner-mob.png);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
 }
 
 .home_title {
@@ -17,6 +22,15 @@
   padding-top: 158px;
   margin-bottom: 16px;
   max-width: 436px;
+  @include media(mobile) {
+    font-weight: 800;
+    font-size: 51px;
+    line-height: 1.07407;
+    color: #ff5b02;
+    padding-top: 0;
+    text-align: center;
+    max-width: 326px;
+  }
 }
 .home_accent {
   color: #fff;
@@ -29,6 +43,13 @@
   letter-spacing: 0.01em;
   color: #fff;
   max-width: 436px;
+  @include media(mobile) {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    text-align: center;
+  }
 }
 .google_btn {
   margin-top: 32px;
@@ -41,6 +62,11 @@
   max-width: 198px;
 
   cursor: pointer;
+  @include media(mobile) {
+    margin-bottom: 29px;
+    max-width: 320px;
+    justify-content: center;
+  }
 }
 
 .btn_img {
