--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,5 +1,5 @@
 .home_section {
-  background: url(../img/home/baner-mob.jpg) no-repeat center center;
+  background: url(../img/home/baner.jpg) no-repeat center center;
   background-size: cover;
   max-width: 1200px;
   height: 600px;
