--- a/src/partials/feature-keys.html
+++ b/src/partials/feature-keys.html
@@ -5,7 +5,7 @@
       <li class="feature-item">
         <div class="feature-icon">
           <svg width="50" height="50">
-            <use href="./img/sprite.svg#icon-icon_family"></use>
+            <use href="./img/sprite.svg#icon-icon_game"></use>
           </svg>
         </div>
         <div class="feature-text">
