--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -11,6 +11,12 @@
     flex-direction: column;
     justify-content: flex-end;
   }
+  @include media(mobileL) {
+    background: url(../img/home/baner-mob.jpg);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
 }
 
 .home_title {
@@ -23,6 +29,15 @@
   margin-bottom: 16px;
   max-width: 436px;
   @include media(mobile) {
+    font-weight: 800;
+    font-size: 51px;
+    line-height: 1.07407;
+    color: #ff5b02;
+    padding-top: 0;
+    text-align: center;
+    max-width: 326px;
+  }
+  @include media(mobileL) {
     font-weight: 800;
     font-size: 51px;
     line-height: 1.07407;
@@ -50,6 +65,13 @@
     letter-spacing: 0.01em;
     text-align: center;
   }
+  @include media(mobileL) {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    text-align: center;
+  }
 }
 .google_btn {
   margin-top: 32px;
@@ -63,6 +85,11 @@
 
   cursor: pointer;
   @include media(mobile) {
+    margin-bottom: 29px;
+    max-width: 320px;
+    justify-content: center;
+  }
+  @include media(mobileL) {
     margin-bottom: 29px;
     max-width: 320px;
     justify-content: center;
