--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -15,6 +15,29 @@
           <li class="nav-list_item"><a href="">User Reviews</a></li>
         </ul>
       </nav>
+
+      <svg class="burger_menu burger_js" width="40" height="40">
+        <use href="../img/sprite.svg#icon-Frame"></use>
+      </svg>
+    </div>
+    <!-- mob menu -->
+    <div class="mob_menu">
+      <div class="container menu_container">
+        <button class="mob_btn mob_btn_js">
+          <svg class="" width="40" height="40">
+            <use href="../img/sprite.svg#icon-x"></use>
+          </svg>
+        </button>
+        <nav>
+          <ul class="mob_list">
+            <li><a href="#home" class="mob_link">Home</a></li>
+            <li><a href="#features" class="mob_link">Feature keys</a></li>
+            <li><a href="#about" class="mob_link">About Us</a></li>
+            <li><a href="#gallery" class="mob_link">Gallery</a></li>
+            <li><a href="#user" class="mob_link">User Reviews</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <div class="container home_section">
