--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,4 +1,4 @@
-<section class="section_container">
+<section class="section_container" id="home">
   <header class="header container">
     <div class="container_inner">
       <div class="logo">
@@ -8,8 +8,8 @@
       </div>
       <nav class="">
         <ul class="nav-list">
-          <li class="nav-list_item"><a href="">Home</a></li>
-          <li class="nav-list_item"><a href="">Feature keys</a></li>
+          <li class="nav-list_item"><a href="#home">Home</a></li>
+          <li class="nav-list_item"><a href="#features">Feature keys</a></li>
           <li class="nav-list_item"><a href="">About Us</a></li>
           <li class="nav-list_item"><a href="">Gallery</a></li>
           <li class="nav-list_item"><a href="">User Reviews</a></li>
@@ -17,7 +17,7 @@
       </nav>
 
       <svg class="burger_menu burger_js" width="40" height="40">
-        <use href="../img/sprite.svg#icon-Frame"></use>
+        <use href="./img/sprite.svg#icon-Frame"></use>
       </svg>
     </div>
     <!-- mob menu -->
