mob menu fix button

--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -25,7 +25,7 @@
       <div class="container menu_container">
         <button class="mob_btn mob_btn_js">
           <svg class="" width="40" height="40">
-            <use href="../img/sprite.svg#icon-x"></use>
+            <use href="./img/sprite.svg#icon-x"></use>
           </svg>
         </button>
         <nav>
