--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -83,7 +83,7 @@
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.01em;
-    text-align: center;
+    text-align: left;
   }
 }
 .google_btn {
