--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -10,7 +10,7 @@
         <ul class="nav-list">
           <li class="nav-list_item"><a href="#home">Home</a></li>
           <li class="nav-list_item"><a href="#features">Feature keys</a></li>
-          <li class="nav-list_item"><a href="">About Us</a></li>
+          <li class="nav-list_item"><a href="#about">About Us</a></li>
           <li class="nav-list_item"><a href="">Gallery</a></li>
           <li class="nav-list_item"><a href="">User Reviews</a></li>
         </ul>
