--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 @import './header.scss';
 @import './home.scss';
 @import './feature-keys.scss';
+@import './about-us.scss';
+@import './gallery.scss';
 
 :root {
   font-family: 'Poppins', sans-serif;
