--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,74 +4,74 @@
     <div class="gallery_images_wrapper">
       <!-- Original set of images -->
       <img
-        src="../img/gallery/img_gal_1.png"
+        src="./img/gallery/img_gal_1.png"
         alt="Gallery Image 1"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_2.png"
+        src="./img/gallery/img_gal_2.png"
         alt="Gallery Image 2"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_3.png"
+        src="./img/gallery/img_gal_3.png"
         alt="Gallery Image 3"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_4.png"
+        src="./img/gallery/img_gal_4.png"
         alt="Gallery Image 4"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_5.png"
+        src="./img/gallery/img_gal_5.png"
         alt="Gallery Image 5"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_6.png"
+        src="./img/gallery/img_gal_6.png"
         alt="Gallery Image 6"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_7.png"
+        src="./img/gallery/img_gal_7.png"
         alt="Gallery Image 7"
         class="gallery_image"
       />
 
       <!-- Duplicated set of images for seamless loop -->
       <img
-        src="../img/gallery/img_gal_1.png"
+        src="./img/gallery/img_gal_1.png"
         alt="Gallery Image 1"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_2.png"
+        src="./img/gallery/img_gal_2.png"
         alt="Gallery Image 2"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_3.png"
+        src="./img/gallery/img_gal_3.png"
         alt="Gallery Image 3"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_4.png"
+        src="./img/gallery/img_gal_4.png"
         alt="Gallery Image 4"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_5.png"
+        src="./img/gallery/img_gal_5.png"
         alt="Gallery Image 5"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_6.png"
+        src="./img/gallery/img_gal_6.png"
         alt="Gallery Image 6"
         class="gallery_image"
       />
       <img
-        src="../img/gallery/img_gal_7.png"
+        src="./img/gallery/img_gal_7.png"
         alt="Gallery Image 7"
         class="gallery_image"
       />
