--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,6 +1,6 @@
 .home_section {
   background: url(../img/home/baner.jpg) no-repeat center center;
-  background-size: cover;
+  // background-size: cover;
   max-width: 1200px;
   height: 600px;
   position: relative;
@@ -33,41 +33,49 @@
 }
 
 .home_title {
+  // font-size: clamp(
+  //   54px,
+  //   6vw,
+  //   72px
+  // ); // Минимум 24px, максимум 60px, изменяется в зависимости от ширины экрана
   font-family: 'Baloo 2', sans-serif;
   font-weight: 800;
-  font-size: 60px;
-  line-height: 1.5;
+  @include font(72, 90); // 60px font-size, 90px line-height
   color: #ff5b02;
-  padding-top: 158px;
+  padding-top: 164px;
   margin-bottom: 16px;
   max-width: 436px;
+  margin-bottom: 16px;
+
   @include media(mobile) {
     font-weight: 800;
-    font-size: 51px;
-    line-height: 1.07407;
-    color: #ff5b02;
+    @include font(51, 55); // 51px font-size, 55px line-height
     padding-top: 0;
     text-align: center;
     max-width: 326px;
   }
+
   @include media(mobileL) {
     font-weight: 800;
-    font-size: 51px;
-    line-height: 1.07407;
-    color: #ff5b02;
+    @include font(51, 55); // 51px font-size, 55px line-height
     padding-top: 0;
-    text-align: center;
+    text-align: left; // Исправлено 'text-align: le;'
     max-width: 326px;
-    text-align: left;
   }
 }
+
 .home_accent {
   color: #fff;
 }
 .home_par {
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
-  font-size: 22px;
+  // font-size: 22px;
+  font-size: clamp(
+    16px,
+    6vw,
+    22px
+  ); // Минимум 24px, максимум 60px, изменяется в зависимости от ширины экрана
   line-height: 1.54545;
   letter-spacing: 0.01em;
   color: #fff;
