--- a/src/scss/about-us.scss
+++ b/src/scss/about-us.scss
@@ -9,7 +9,7 @@
   top: 1442px;
   left: 50%;
   transform: translateX(-50%);
-  background: url('../img/about-us/nightmare-ai-enhanced222.png') no-repeat
+  background: url('./img/about-us/nightmare-ai-enhanced222.png') no-repeat
     center center;
   background-size: cover;
   z-index: 0;
