--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,11 +1,11 @@
-<section class="" id="about">
+<section class="">
   <div class="container about_us_section">
     <img
       src="./img/about-us/738shots_so-min.png"
       alt="iPhone showcasing"
       class="img_iphone"
     />
-    <div class="about_us_content">
+    <div class="about_us_content" id="about">
       <h2 class="about_us_title">About Us</h2>
       <p class="about_us_description">
         Bubble Coco offers a thrilling bubble shooting experience where you help
