--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,7 +1,7 @@
-<section class="" id="about">
+<section id="about">
   <div class="container about_us_section">
     <img
-      src="../img/about-us/738shots_so-min.png"
+      src="./img/about-us/738shots_so-min.png"
       alt="iPhone showcasing"
       class="img_iphone"
     />
@@ -15,7 +15,7 @@
       </p>
     </div>
     <img
-      src="../img/about-us/nightmare-ai-enhanced-8.png"
+      src="./img/about-us/nightmare-ai-enhanced-8.png"
       alt="Nightmare"
       class="nightmare_ai_icon"
     />
