--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -11,8 +11,8 @@
           <li class="nav-list_item"><a href="#home">Home</a></li>
           <li class="nav-list_item"><a href="#features">Feature keys</a></li>
           <li class="nav-list_item"><a href="#about">About Us</a></li>
-          <li class="nav-list_item"><a href="">Gallery</a></li>
-          <li class="nav-list_item"><a href="">User Reviews</a></li>
+          <li class="nav-list_item"><a href="#gallery">Gallery</a></li>
+          <li class="nav-list_item"><a href="#reviews">User Reviews</a></li>
         </ul>
       </nav>
 
@@ -34,7 +34,7 @@
             <li><a href="#features" class="mob_link">Feature keys</a></li>
             <li><a href="#about" class="mob_link">About Us</a></li>
             <li><a href="#gallery" class="mob_link">Gallery</a></li>
-            <li><a href="#user" class="mob_link">User Reviews</a></li>
+            <li><a href="#reviews" class="mob_link">User Reviews</a></li>
           </ul>
         </nav>
       </div>
