--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 @import './feature-keys.scss';
 @import './about-us.scss';
 @import './gallery.scss';
+@import './user-Reviews.scss';
 
 :root {
   font-family: 'Poppins', sans-serif;
