--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -1,12 +1,14 @@
 /* gallery.scss */
 .gallery_section {
   position: absolute;
-  width: 1200px;
+  // width: 1200px;
+  width: 100%;
   height: 778px;
   top: 1949px;
   left: 50%;
   transform: translateX(-50%);
-  background-image: url(../img/feature-keys/Vector.png);
+  background-image: url(../img/gallery/Vector.png);
+  background-size: cover;
   z-index: 1;
   overflow: hidden;
 }
@@ -28,9 +30,7 @@
   align-items: center;
   gap: 24px;
   position: relative;
-  width: calc(
-    252px * 14 + 24px * 13
-  ); /* Double the images to create a seamless loop */
+  width: calc(252px * 14 + 24px * 13);
   animation: scrollGallery 40s linear infinite;
 }
 
@@ -57,7 +57,6 @@
     width: 360px;
     height: 493px;
     top: 2165px;
-    // position: relative;
   }
 
   .gallery_title {
@@ -71,7 +70,6 @@
     gap: 20px;
     width: 200%;
     width: calc(180px * 14 + 20px * 13);
-    // animation: scrollGallery 40s linear infinite;
   }
 
   .gallery_image {
