--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -12,7 +12,7 @@
           <li class="nav-list_item"><a href="#features">Feature keys</a></li>
           <li class="nav-list_item"><a href="#about">About Us</a></li>
           <li class="nav-list_item"><a href="#gallery">Gallery</a></li>
-          <li class="nav-list_item"><a href="#reviews">User Reviews</a></li>
+          <li class="nav-list_item"><a href="">User Reviews</a></li>
         </ul>
       </nav>
 
