reviews and fotter

--- a/src/scss/about-us.scss
+++ b/src/scss/about-us.scss
@@ -4,7 +4,8 @@
   align-items: center;
   gap: 116px;
   position: absolute;
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   height: 543px;
   top: 1442px;
   left: 50%;
@@ -68,7 +69,6 @@
   }
 
   .about_us_content {
-    // margin-top: 40px;
     gap: 16px;
     width: 328px;
     height: 228px;
@@ -81,6 +81,37 @@
 
   .img_iphone {
     width: 328px;
+    height: 281px;
+  }
+
+  .nightmare_ai_icon {
+    display: none;
+  }
+}
+
+@include media(mobile) {
+  .about_us_section {
+    flex-direction: column-reverse;
+    justify-content: center;
+    width: 310px;
+    height: 605px;
+    top: 1590px;
+    gap: 16px;
+  }
+
+  .about_us_content {
+    gap: 16px;
+    width: 298px;
+    height: 228px;
+  }
+
+  .about_us_title {
+    line-height: 50px;
+    font-size: 34px;
+  }
+
+  .img_iphone {
+    width: 308px;
     height: 281px;
   }
 
