--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @import './about-us.scss';
 @import './gallery.scss';
 @import './user-Reviews.scss';
+@import './footer.scss';
 
 :root {
   font-family: 'Poppins', sans-serif;
