--- a/src/partials/user-Reviews.html
+++ b/src/partials/user-Reviews.html
@@ -1,18 +1,14 @@
-<section id="reviews">
-  <div class="container reviews_section">
+<section>
+  <div class="container reviews_section" id="reviews">
     <div class="reviews_content">
       <h2 class="reviews_title">USER REVIEWS</h2>
       <div class="review_arrows">
-
         <svg class="arrow left_arrow" width="36" height="36">
-          <use xlink:href="./img/sprite.svg#icon-left-off"></use>
+          <use href="./img/sprite.svg#icon_left_Off"></use>
         </svg>
-        <svg class="arrow right_arrow" width="36" height="36">
-          <use xlink:href="./img/sprite.svg#icon-right-on"></use>
+        <svg class="arrow left_arrow" width="36" height="36">
+          <use href="./img/sprite.svg#icon_right_On"></use>
         </svg>
-
-   
-
       </div>
     </div>
     <div class="reviews_wrapper">
