--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="" id="gallery">
+<section class="">
   <div class="container gallery_section">
     <h2 class="gallery_title">Gallery</h2>
     <div class="gallery_images_wrapper" id="gallery">
