--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -175,6 +175,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-size: cover;
 }
 .mob_menu.active {
   right: 0;
