fix arrow names

--- a/src/partials/user-Reviews.html
+++ b/src/partials/user-Reviews.html
@@ -6,7 +6,7 @@
         <svg class="arrow left_arrow" width="36" height="36">
           <use href="./img/sprite.svg#icon_left_Off"></use>
         </svg>
-        <svg class="arrow left_arrow" width="36" height="36">
+        <svg class="arrow right_arrow" width="36" height="36">
           <use href="./img/sprite.svg#icon_right_On"></use>
         </svg>
       </div>
