--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,7 +5,7 @@
 @import './gallery.scss';
 @import './user-Reviews.scss';
 @import './footer.scss';
-
+@import './privacy.scss';
 :root {
   font-family: 'Poppins', sans-serif;
   font-size: 16px;
