--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -29,9 +29,9 @@
   font-weight: 500;
   line-height: 24px;
   letter-spacing: 0.01em;
-  &:hover {
-    text-decoration: underline;
-  }
+}
+.footer_text a:hover {
+  text-decoration: underline;
 }
 
 .footer_rights {
