about us corrected

--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,5 +1,5 @@
-<section class="" id="about">
-  <div class="container about_us_section">
+<section class="about-us">
+  <div class="container about_us_section" id="about">
     <img
       src="./img/about-us/738shots_so-min.png"
       alt="iPhone showcasing"
