--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,8 +1,7 @@
-<section class="">
-  <div class="container gallery_section">
+<section class="gallery">
+  <div class="container gallery_section" id="gallery">
     <h2 class="gallery_title">Gallery</h2>
-    <div class="gallery_images_wrapper" id="gallery">
-      <!-- Original set of images -->
+    <div class="gallery_images_wrapper">
       <img
         src="./img/gallery/img_gal_1.png"
         alt="Gallery Image 1"
@@ -38,8 +37,6 @@
         alt="Gallery Image 7"
         class="gallery_image"
       />
-
-      <!-- Duplicated set of images for seamless loop -->
       <img
         src="./img/gallery/img_gal_1.png"
         alt="Gallery Image 1"
