--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,11 +1,12 @@
 <section class="about-us">
-  <div class="container about_us_section" id="about">
+  <div class="container about_us_section">
     <img
       src="./img/about-us/738shots_so-min.png"
       alt="iPhone showcasing"
       class="img_iphone"
+      id="about"
     />
-    <div class="about_us_content" id="about">
+    <div class="about_us_content">
       <h2 class="about_us_title">About Us</h2>
       <p class="about_us_description">
         Bubble Coco offers a thrilling bubble shooting experience where you help
